--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+	<script src='node_modules/web3/dist/web3.min.js'></script>
+  <link rel="stylesheet" href="/assets/css/style.css">
 	<title>Game Puzzle!</title>
+  <base href="/">
 </head>
 <body>
 	<footer>
@@ -44,10 +46,11 @@
       <div class="footer">  
         <button>Play</button>  
         <span id="move">Move: 100</span>  
+        <span id="time">Time: 100</span> 
   
       </div>  
     </div>  
-
- <script src="main.js"></script>
+<h1 class="message">You win!</h1>
+ <script src="/assets/js/main.js"></script>
 </body>
 </html>
