--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src='node_modules/web3/dist/web3.min.js'></script>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 	<title>Game Puzzle!</title>
   <base href="/">
 </head>
@@ -51,6 +51,6 @@
       </div>  
     </div>  
 <h1 class="message">You win!</h1>
- <script src="/assets/js/main.js"></script>
+ <script src="main.js"></script>
 </body>
 </html>
