--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       </div>  
     </div>  
 <h1 class="message">You win!</h1>
- <script src="main.js"></script>
+ <script src="https://ilya2706.github.io/blockchain/main.js"></script>
 </body>
 </html>
