--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div>
 		<center>
 			<h1>
-			     Win and get Ethereum!
+			     First player who win, given Prize!
 			     <p id="demo"></p>
 		    </h1>
 
